--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   permission_handler: ^12.0.0+1
   share_plus: ^11.0.0
   connectivity_plus: ^6.1.4
+  http: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
