--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,10 @@ dependencies:
   share_plus: ^11.0.0
   connectivity_plus: ^6.1.4
   http: ^1.1.0
-
+  qr_code_scanner: ^1.0.1
+  provider: ^6.1.2
+  flutter_spinkit: ^5.2.1
+  shared_preferences: ^2.2.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
